<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sign_in_text"
        android:textSize="40sp"
        android:textColor="@color/theme_dark_grey"
        android:layout_marginTop="@dimen/signin_reg_big_marginTop"/>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_in"
        android:layout_marginTop="@dimen/signin_reg_medium_margin_top"
        android:layout_marginLeft="@dimen/signin_reg_side_margin"
        android:layout_marginRight="@dimen/signin_reg_side_margin"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_input_hint" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email"
        android:layout_marginTop="@dimen/signin_reg_medium_margin_top"
        android:layout_marginLeft="@dimen/signin_reg_side_margin"
        android:layout_marginRight="@dimen/signin_reg_side_margin"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="@string/password_input_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_password"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/tv_forgot_password_text"
        android:textColor="@color/forget_pass_reg_color"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/signin_reg_medium_margin_top"
        android:layout_marginLeft="@dimen/signin_reg_big_side_margin"
        />
    <TextView
        android:id="@+id/tv_register_from_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/til_password"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/forget_pass_reg_color"
        android:layout_marginRight="@dimen/signin_reg_big_side_margin"
        android:layout_marginTop="@dimen/signin_reg_medium_margin_top"
        android:text="@string/register_text"/>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/signin_reg_big_marginTop"
        android:text="@string/sign_in_text"
        android:textAllCaps="false"
        android:textSize="@dimen/sign_in_reg_medium_text_size"
        android:backgroundTint="@color/theme_light_green"
        />






</androidx.constraintlayout.widget.ConstraintLayout>