<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">
    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/register_text"
        android:textSize="40sp"
        android:textColor="@color/theme_dark_grey"
        android:layout_marginTop="@dimen/signin_reg_big_marginTop"/>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_reg_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register"
        android:layout_marginTop="@dimen/signin_reg_medium_margin_top"
        android:layout_marginLeft="@dimen/signin_reg_side_margin"
        android:layout_marginRight="@dimen/signin_reg_side_margin"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_reg_email_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:hint="@string/email_input_hint" />
    </com.google.android.material.textfield.TextInputLayout>





    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_reg_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_reg_email"
        android:layout_marginTop="@dimen/signin_reg_medium_margin_top"
        android:layout_marginLeft="@dimen/signin_reg_side_margin"
        android:layout_marginRight="@dimen/signin_reg_side_margin"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_reg_password_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="@string/password_text" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_reg_repeat_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_reg_password"
        android:layout_marginTop="@dimen/signin_reg_medium_margin_top"
        android:layout_marginLeft="@dimen/signin_reg_side_margin"
        android:layout_marginRight="@dimen/signin_reg_side_margin"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_reg_repeat_password_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="@string/repeat_password_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/til_reg_repeat_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAllCaps="false"
        android:backgroundTint="@color/theme_light_green"
        android:layout_marginTop="@dimen/signin_reg_big_marginTop"
        android:text="@string/register_text"/>




</androidx.constraintlayout.widget.ConstraintLayout>